Reafctor:structure of user-services